--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   nginx:
     build: ./nginx
+    image: fnworks/nginx
     ports:
       - "8080:80"
     volumes:
@@ -10,6 +11,7 @@ services:
       - fnworks
   php:
     build: ./php
+    image: fnworks/php
     volumes:
       - ./app:/var/www/html
     networks:
